# wifi-party-rust-2026

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  Dioxus.toml  HACKING.md  README.md  README.zh.md  TASK.md  build.rs  flake.nix  instrumental.md
.agents/skills/dioxus/: SKILL.md
.agents/skills/share-apple-music/: SKILL.md
.agents/skills/share_synchronized_music/: SKILL.md
.claude/: skills
.github/workflows/: bundle.yml
.qoder/quests/: unnamed-task-1767450138.md  unnamed-task.md
.trae/documents/: Initialize Wi-Fi Party Core Architecture (1).md  Initialize Wi-Fi Party Core Architecture.md  Refactor Audio Pipeline Architecture.md
assets/: AndroidManifest.xml  Entitlements.ios.plist  Info.ios.plist  Info.plist  LaunchScreen.storyboard  MainActivity.kt  all_rt.onnx  custom.css  package-lock.json  package.json  tailwind.css  tailwind_output.css
burn-convert/: Cargo.toml  README.md
burn-convert/src/: compare_ndarray.rs  compare_wgpu.rs  main.rs
burn-convert/src/model/: all_rt.bpk  all_rt.rs
crates/patches/cubecl-wgpu-0.10.0/: .cargo_vcs_info.json  Cargo.toml
crates/patches/cubecl-wgpu-0.10.0/src/: runtime.rs
crates/patches/cubecl-wgpu-0.10.0/src/compute/: mem_manager.rs  schedule.rs  server.rs  stream.rs
crates/patches/cubecl-wgpu-0.9.0/src/: runtime.rs
crates/patches/cubecl-wgpu-0.9.0/src/compute/: mem_manager.rs  schedule.rs  server.rs  stream.rs
crates/vocal-model/: Cargo.toml  build.rs
crates/vocal-model/model/: all_rt.rs
crates/vocal-model/src/: lib.rs
crates/vocal-model/src/model/: all_rt.bpk  all_rt.rs  mod.rs
crates/vocal-model/src/model/all_rt/: lstm.rs  submodule1.rs  submodule2.rs  submodule3.rs  submodule4.rs
crates/vocal-model/tests/: rt_dtt.rs
examples/: check_audio.rs
nix/: android-gradle-deps.json  packages.nix
src/: main.rs
src/audio/: capture.rs  file.rs  frame.rs  jitter.rs  mixer.rs  mod.rs  opus.rs  playback.rs  sample.rs  symphonia_compat.rs
src/audio/buffers/: audio_batcher.rs  jitter_buffer.rs  mod.rs  simple_buffer.rs
src/audio/decoders/: compressed_packet_queue.rs  fft_resampler.rs  interleaver.rs  mod.rs  symphonia_decoder.rs
src/audio/effects/: gain.rs  level_meter.rs  mod.rs  mute.rs  noise_gate.rs  switch.rs  vocal_remover.rs
src/io/: audio.rs  file_picker.rs  mod.rs  multicast_lock.rs  network.rs
src/music_provider/: apple_music.rs  local_file.rs  mod.rs
src/music_provider/apple_music/: api.rs  download.rs  m3u8.rs  mod.rs  mp4_decrypt.rs  provider.rs
src/network/: mod.rs  receive.rs  send.rs
src/party/: audio.rs  codec.rs  combinator.rs  config.rs  host.rs  mod.rs  music.rs  network.rs  network_node.rs  network_stream.rs  ntp.rs  packet_dispatcher.rs  party.rs  realtime_stream.rs  stream.rs  sync_stream.rs  tagged_packet.rs
src/party/share_music/: mod.rs  playlist.rs  receiver.rs  sender.rs
src/party/tests/: mod.rs  sync_stream.rs
src/pipeline/: chain.rs  dyn_traits.rs  effect.rs  effects.rs  frame.rs  graph.rs  graph_node.rs  layer.rs  mod.rs  node.rs  nodes.rs  pipeline.rs  traits.rs
src/pipeline/effect/: gain.rs  level_meter.rs  mod.rs  mute.rs  noise_gate.rs
src/pipeline/node/: audio_batcher.rs  inspect.rs  jitter_buffer.rs  mix_pull.rs  mixer.rs  mod.rs  network_push.rs  null_node.rs  simple_buffer.rs  sinewave.rs  tee.rs  terminal.rs
src/platform_support/: android_utils.rs  mod.rs
src/state/: mod.rs  view_state.rs
src/ui/: app.rs  components.rs  mod.rs  participants.rs  sidebar.rs
src/ui/sidebar_panels/: audio_control.rs  debug.rs  mod.rs  participants.rs  share_music.rs
