[package]
name = "wifi-party-rust"
version = "0.1.0"
authors = ["ken <39673849+SuperKenVery@users.noreply.github.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.2", features = ["desktop"] }
cpal = "0.17"
rkyv = "0.8"
rtrb = "0.3"
socket2 = "0.5"
crossbeam = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
dasp_sample = "0.11"
anyhow = "1.0.100"
neteq = { version = "0.8", default-features = false }
num-traits = "0.2.19"
dashmap = "6.1.0"
network-interface = "2.0"
opus = "0.3"
audiopus_sys = { version = "0.2", features = ["static"] }
deloxide = { version = "1.0.0", features = ["lock-order-graph", "logging-and-visualization"] }

[dev-dependencies]
hound = "3.5"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
