[package]
name = "wifi-party-rust"
version = "0.1.0"
authors = ["ken <39673849+SuperKenVery@users.noreply.github.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "crates/vocal-model"]
resolver = "3"

[dependencies]
dioxus = { version = "0.7.9", default-features = false, features = ["router"] }
chrono = "0.4"
cpal = { git="https://github.com/RustAudio/cpal.git", default-features = false, features = ["asio", "jack", "pulseaudio", "realtime", "realtime-dbus"] }
rkyv = "0.8"
rtrb = "0.3"
socket2 = { version = "0.5", features = ["all"] }
crossbeam = "0.8"
tracing = { version = "0.1", features = ["log-always"] }
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
dasp_sample = "0.11"
anyhow = "1.0.100"
neteq = { version = "0.8", default-features = false }
num-traits = "0.2.19"
dashmap = "6.1.0"
network-interface = "2.0"
opus = "0.3"
deloxide = { version = "1.0.0", features = ["lock-order-graph", "logging-and-visualization"] }
symphonia = { version = "0.5", features = ["mp3", "flac", "ogg", "wav", "aac", "alac", "isomp4"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
rubato = "0.16"
libc = "0.2.180"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
mp4-atom = { package = "media-mp4-atom", version = "0.10.1" }
wifi-party-vocal-model = { path = "crates/vocal-model", optional = true }

[target.'cfg(target_os = "android")'.dependencies]
ndk-context = "0.1"
jni = "0.21"
cubecl-common = { version = "=0.9.0", default-features = false, features = ["serde"] }

[target.'cfg(target_os = "ios")'.dependencies]
cubecl-common = { version = "=0.9.0", default-features = false, features = ["serde"] }
log = "0.4"
oslog = "0.2"

[dev-dependencies]
hound = "3.5"
pollster = "0.4.0"
wgpu = "29.0.1"

[features]
default = ["desktop", "cpal-pipewire", "vocal-removal"]
web = ["dioxus/default", "dioxus/web"]
desktop = ["dioxus/default", "dioxus/desktop"]
mobile = ["dioxus/default", "dioxus/mobile", "vocal-removal"]
cpal-pipewire = ["cpal/pipewire"]
vocal-removal = ["dep:wifi-party-vocal-model"]

# [profile.dev.package."*"]
# opt-level = 3
# debug-assertions = false

# [profile.test.package."*"]
# opt-level = 3
# debug-assertions = false

[profile.desktop-dev]
inherits = "dev"
strip = false
opt-level = 1

[profile.desktop-dev.package."*"]
opt-level = 3
debug-assertions = false

[profile.desktop-dev.package.wifi-party-vocal-model]
opt-level = 3
debug-assertions = false
overflow-checks = false
codegen-units = 1
incremental = false
debug = "line-tables-only"
