[package]
name = "wifi-party-vocal-model"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { version = "0.21", features = ["std"] }
burn-store = "0.21"
burn-wgpu = { version = "0.21.0", features = ["metal", "cubecl-msl"] }
cubecl = { version = "=0.9.0", features = ["wgpu"] }
gpu-fft = { version = "1.1.1", features = ["wgpu"] }
include_bytes_aligned = "0.1"
tracing = "0.1"

[build-dependencies]
burn-onnx = "0.21"
